# app

./: CMakeLists.txt  GDCUDockerfile  HPCDockerfile  README.md  build.sh  build_and_sync.sh  gdcu-server-app-deployment.yaml  hpc-client-app-deployment.yaml  jenkinsfile  start_up.sh  toolchain-s32g3.cmake
GDCU/: CMakeLists.txt  gdcu  gdcu.cpp  gdcu.h  gdcu.yaml  main.cpp
HPC/: App_HPC_Get_Set.c  App_HPC_Get_Set.h  CMakeLists.txt  HPC_SinglePedalDrive.c  HPC_SinglePedalDrive.h  HPC_SinglePedalDrive_private.h  HPC_SinglePedalDrive_types.h  hpc  main.c  rtwtypes.h  server.c  server.h
